[package]
name = "fanboy"
version = "0.1.0"
edition = "2021"

[dependencies]
device_query = "2.1.0"
glium = "0.36.0"
glium-glyph = "0.14.0"
glium_text_rusttype = "0.3.3"
glutin = "0.32.2"
glyph_brush = "0.7.11"
lazy_static = "1.5.0"
libm = "0.2.11"
proc_mem = "0.1.6"
rusttype = "0.9.3"
winit = "0.30.8"

